Add minimal Maven pom.xml